<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".testAc"
    >

    <CheckBox
        android:id="@+id/checkbox"
        android:text="@string/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <!--
    orientation 控制RadioButton垂直还是水平排放
    -->

    <RadioGroup
        android:id="@+id/radioGroup"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radio1"
            android:text="@string/nan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RadioButton
            android:id="@+id/radio2"
            android:text="@string/nv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RadioGroup>

    <Button
        android:text="@string/but_text"
        android:id="@+id/but_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>