<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/but_first"
        android:text="@string/but_first"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/but_second"
        android:text="@string/but_second"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:gravity="center"
        android:id="@+id/textView1"
        android:text="@string/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>